--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@sanity/client": "^6.22.4",
     "@sanity/icons": "^3.4.0",
     "@sanity/image-url": "1",
+    "@sanity/locale-sv-se": "^1.2.16",
     "@sanity/preview-url-secret": "^2.0.4",
     "@sanity/vision": "3",
     "@types/lodash": "^4.17.13",
