--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "next-sanity": "9",
     "or": "^0.2.0",
     "react": "19.0.0",
+    "react-cookiebot": "^1.0.10",
     "react-dom": "19.0.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
@@ -56,6 +57,7 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-cookiebot": "^1.0.5",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
