--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@sanity/preview-url-secret": "^2.0.4",
     "@sanity/vision": "3",
     "@types/lodash": "^4.17.13",
+    "@vercel/analytics": "^1.4.1",
     "@vercel/speed-insights": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
